[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/PerfMonitor/MonitorFont.tres" type="FontFile" id=1]
[ext_resource path="res://addons/PerfMonitor/MonitorPlotPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.266667, 0.317647, 0.34902, 0.913725 )

[node name="MonitorPlotPanel" type="Panel"]
offset_bottom = 36.0
tooltip_text = "Click to reset"
theme_override_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -20.0
offset_right = -3.0
offset_bottom = -2.0
theme_override_fonts/font = ExtResource( 1 )
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMax" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = -3.0
offset_bottom = -109.882
theme_override_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMin" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 20.0
offset_right = 3.0
theme_override_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_MonitorPlotPanel_gui_input"]
